added db context

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=penszzipsqlserver.database.windows.net; Initial Catalog=myDB; Authentication=Active Directory Default; Encrypt=True;"
   }
 }
